Updated with our f a c e s.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -187,7 +187,7 @@ body {
 			<div class="w3-quarter m4 w3-margin-bottom">
 				<div class="w3-light-grey">
 					<img
-						src="https://scontent-yyz1-1.xx.fbcdn.net/v/t1.0-9/52460313_377045466183148_2552587312705830912_o.jpg?_nc_cat=100&_nc_ht=scontent-yyz1-1.xx&oh=f41e5c7297e6a21a0f1cc91b3304fe48&oe=5D0DD413"
+						src="https://scontent-yyz1-1.xx.fbcdn.net/v/t1.0-9/50286122_10161444099300473_5501036323655385088_n.jpg?_nc_cat=103&_nc_ht=scontent-yyz1-1.xx&oh=bb115889d0a4dc176cdd34b447d10506&oe=5D19CDE3"
 						alt="John" style="width: 100%">
 					<div class="w3-container">
 						<h3>Jason Skinner</h3>
@@ -201,7 +201,7 @@ body {
 			<div class="w3-quarter m4 w3-margin-bottom">
 				<div class="w3-light-grey">
 					<img
-						src="https://scontent-yyz1-1.xx.fbcdn.net/v/t1.0-9/52460313_377045466183148_2552587312705830912_o.jpg?_nc_cat=100&_nc_ht=scontent-yyz1-1.xx&oh=f41e5c7297e6a21a0f1cc91b3304fe48&oe=5D0DD413"
+						src="https://media.licdn.com/dms/image/C5103AQHm0Oky0wmPtg/profile-displayphoto-shrink_800_800/0?e=1558569600&v=beta&t=b8BAFgIKLTs9D8-lQ4xPbakT6m_IGTVF5vk0CZIZfpY"
 						alt="John" style="width: 100%">
 					<div class="w3-container">
 						<h3>Amanda D'Errico</h3>
@@ -215,7 +215,7 @@ body {
 			<div class="w3-quarter m4 w3-margin-bottom">
 				<div class="w3-light-grey">
 					<img
-						src="https://scontent-yyz1-1.xx.fbcdn.net/v/t1.0-9/52460313_377045466183148_2552587312705830912_o.jpg?_nc_cat=100&_nc_ht=scontent-yyz1-1.xx&oh=f41e5c7297e6a21a0f1cc91b3304fe48&oe=5D0DD413"
+						src="https://media.licdn.com/dms/image/C5603AQE66svKU6jVxA/profile-displayphoto-shrink_800_800/0?e=1558569600&v=beta&t=W3tJhZsAP3DB6VTfZRhtBCxc_dI9Aspo51YEdkTLuCg&fbclid=IwAR09Gigtc5ScGbwD5VFfklbwpuaQdnVMAWE2gGLH9YVnGXxkNpiyIzPWH9s"
 						alt="John" style="width: 100%">
 					<div class="w3-container">
 						<h3>Mashruf Kabir</h3>
@@ -229,7 +229,7 @@ body {
 			<div class="w3-quarter m4 w3-margin-bottom">
 				<div class="w3-light-grey">
 					<img
-						src="https://scontent-yyz1-1.xx.fbcdn.net/v/t1.0-9/52460313_377045466183148_2552587312705830912_o.jpg?_nc_cat=100&_nc_ht=scontent-yyz1-1.xx&oh=f41e5c7297e6a21a0f1cc91b3304fe48&oe=5D0DD413"
+						src="https://media.licdn.com/dms/image/C5603AQEmK4MowfKL4Q/profile-displayphoto-shrink_800_800/0?e=1558569600&v=beta&t=Ojjuq6zXbf4SBPGVUWM5GxWU5iEBfvVgwmjMxi-4S3o"
 						alt="John" style="width: 100%">
 					<div class="w3-container">
 						<h3>Sherry Innocent</h3>
