--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -189,7 +189,7 @@ body {
 					<img
 						src="https://scontent-yyz1-1.xx.fbcdn.net/v/t1.0-9/50286122_10161444099300473_5501036323655385088_n.jpg?_nc_cat=103&_nc_ht=scontent-yyz1-1.xx&oh=bb115889d0a4dc176cdd34b447d10506&oe=5D19CDE3"
 						alt="John" style="width: 100%">
-					<div class="w3-container">
+					<div class="w3-container"><br/>
 						<h3>Jason Skinner</h3>
 						<p class="w3-opacity">CEO & Founder</p>
 						<p>Phasellus eget enim eu lectus faucibus vestibulum.
