TOO BAD MASH HAHAHAAHAH

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,7 +3,9 @@
 <title>$wag Store</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="text/javascript" src="res/browse.js">;</script>
+<script type="text/javascript" src="res/browse.js">
+	;
+</script>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet"
 	href="https://fonts.googleapis.com/css?family=Poppins">
@@ -42,13 +44,20 @@ body {
 			</h3>
 		</div>
 		<div class="w3-bar-block">
-			<a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
-			<a href="LINK CATEGORY HERE" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Categories</a> 
-			<a href="LINK CART HERE" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cart</a> 
-			<a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Our Team</a>
-			<a href="LINK ACCOUNT PAGE HERE" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Account Management</a>
-			<a href="#membership" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Membership</a> 
-			<a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+			<a href="#" onclick="w3_close()"
+				class="w3-bar-item w3-button w3-hover-white">Home</a> <a
+				href="LINK CATEGORY HERE" onclick="w3_close()"
+				class="w3-bar-item w3-button w3-hover-white">Categories</a> <a
+				href="LINK CART HERE" onclick="w3_close()"
+				class="w3-bar-item w3-button w3-hover-white">Cart</a> <a
+				href="#designers" onclick="w3_close()"
+				class="w3-bar-item w3-button w3-hover-white">Our Team</a> <a
+				href="LINK ACCOUNT PAGE HERE" onclick="w3_close()"
+				class="w3-bar-item w3-button w3-hover-white">Account Management</a>
+			<a href="#membership" onclick="w3_close()"
+				class="w3-bar-item w3-button w3-hover-white">Membership</a> <a
+				href="#contact" onclick="w3_close()"
+				class="w3-bar-item w3-button w3-hover-white">Contact</a>
 		</div>
 	</nav>
 
@@ -72,7 +81,8 @@ body {
 				<b>Swag EECS Bookstore</b>
 			</h1>
 		</div>
-		<form name='browseForm' action="Start" method="POST" onsubmit="return validate();">
+		<form name='browseForm' action="Start" method="POST"
+			onsubmit="return validate();">
 			<table style="width: 100%">
 				<tr align="right">
 					<td><input type='text' name='browse'
@@ -149,7 +159,8 @@ body {
 						</li>
 						<li class="w3-light-grey w3-padding-24">
 							<button
-								class="w3-button w3-white w3-padding-large w3-hover-black">Sign Up</button>
+								class="w3-button w3-white w3-padding-large w3-hover-black">Sign
+								Up</button>
 						</li>
 					</ul>
 				</div>
@@ -158,13 +169,15 @@ body {
 					<ul class="w3-ul w3-light-grey w3-center">
 						<li class="w3-red w3-xlarge w3-padding-32">Pro</li>
 						<li class="w3-padding-16">PDF, PPTX Downloads</li>
-						<li class="w3-padding-16">Get to spend 6 hours with Mash (Wow.)</li>
+						<li class="w3-padding-16">Get to spend 6 hours with Mash
+							(Wow.)</li>
 						<li class="w3-padding-16">Teaching Assistant Availability</li>
 						<li class="w3-padding-16">
 							<h2>$19</h2> <span class="w3-opacity">per month</span>
 						</li>
 						<li class="w3-light-grey w3-padding-24">
-							<button class="w3-button w3-red w3-padding-large w3-hover-black">Sign Up</button>
+							<button class="w3-button w3-red w3-padding-large w3-hover-black">Sign
+								Up</button>
 						</li>
 					</ul>
 				</div>
@@ -182,14 +195,14 @@ body {
 		</div>
 
 		<!-- The Team -->
-		<div class="w3-row-padding w3-grayscale">
+		<div class="w3-row-padding w3">
 
 			<div class="w3-quarter m4 w3-margin-bottom">
 				<div class="w3-light-grey">
 					<img
 						src="https://scontent-yyz1-1.xx.fbcdn.net/v/t1.0-9/50286122_10161444099300473_5501036323655385088_n.jpg?_nc_cat=103&_nc_ht=scontent-yyz1-1.xx&oh=bb115889d0a4dc176cdd34b447d10506&oe=5D19CDE3"
 						alt="John" style="width: 100%">
-					<div class="w3-container"><br/>
+					<div class="w3-container">
 						<h3>Jason Skinner</h3>
 						<p class="w3-opacity">CEO & Founder</p>
 						<p>Phasellus eget enim eu lectus faucibus vestibulum.
@@ -197,6 +210,21 @@ body {
 					</div>
 				</div>
 			</div>
+
+			<div class="w3-quarter m4 w3-margin-bottom">
+				<div class="w3-light-grey">
+					<img
+						src="https://media.licdn.com/dms/image/C5603AQEmK4MowfKL4Q/profile-displayphoto-shrink_800_800/0?e=1558569600&v=beta&t=Ojjuq6zXbf4SBPGVUWM5GxWU5iEBfvVgwmjMxi-4S3o"
+						alt="John" style="width: 100%">
+					<div class="w3-container">
+						<h3>Sherry Innocent</h3>
+						<p class="w3-opacity">CEO & Founder</p>
+						<p>Phasellus eget enim eu lectus faucibus vestibulum.
+							Suspendisse sodales pellentesque elementum.</p>
+					</div>
+				</div>
+			</div>
+
 
 			<div class="w3-quarter m4 w3-margin-bottom">
 				<div class="w3-light-grey">
@@ -226,20 +254,6 @@ body {
 				</div>
 			</div>
 
-			<div class="w3-quarter m4 w3-margin-bottom">
-				<div class="w3-light-grey">
-					<img
-						src="https://media.licdn.com/dms/image/C5603AQEmK4MowfKL4Q/profile-displayphoto-shrink_800_800/0?e=1558569600&v=beta&t=Ojjuq6zXbf4SBPGVUWM5GxWU5iEBfvVgwmjMxi-4S3o"
-						alt="John" style="width: 100%">
-					<div class="w3-container">
-						<h3>Sherry Innocent</h3>
-						<p class="w3-opacity">CEO & Founder</p>
-						<p>Phasellus eget enim eu lectus faucibus vestibulum.
-							Suspendisse sodales pellentesque elementum.</p>
-					</div>
-				</div>
-			</div>
-
 		</div>
 
 		<!-- Contact -->
@@ -248,7 +262,8 @@ body {
 				<b>Contact.</b>
 			</h1>
 			<hr style="width: 50px; border: 5px solid red" class="w3-round">
-			<p>Let us know how we can help you. Our team is available 24/7 for your York University needs.</p>
+			<p>Let us know how we can help you. Our team is available 24/7
+				for your York University needs.</p>
 			<form action="/action_page.php" target="_blank">
 				<div class="w3-section">
 					<label>Name</label> <input class="w3-input w3-border" type="text"
@@ -274,8 +289,7 @@ body {
 	<!-- W3.CSS Container -->
 	<div class="w3-light-grey w3-container w3-padding-32"
 		style="margin-top: 75px; padding-right: 58px">
-		<p class="w3-right">
-		</p>
+		<p class="w3-right"></p>
 	</div>
 
 	<script>
