Linked Sign up to LoginPage.jspx

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -151,9 +151,7 @@ body {
 							<h2>$9</h2> <span class="w3-opacity">per month</span>
 						</li>
 						<li class="w3-light-grey w3-padding-24">
-							<button
-								class="w3-button w3-white w3-padding-large w3-hover-black">Sign
-								Up</button>
+							<button onclick="location.href='LoginPage.jspx';" class="w3-button w3-white w3-padding-large w3-hover-black" >Sign Up</button>
 						</li>
 					</ul>
 				</div>
@@ -169,7 +167,7 @@ body {
 							<h2>$19</h2> <span class="w3-opacity">per month</span>
 						</li>
 						<li class="w3-light-grey w3-padding-24">
-							<button class="w3-button w3-red w3-padding-large w3-hover-black">Sign
+							<button onclick="location.href='LoginPage.jspx';" class="w3-button w3-red w3-padding-large w3-hover-black">Sign
 								Up</button>
 						</li>
 					</ul>
