updated currPage for index and start

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -44,13 +44,13 @@ body {
 			</h3>
 		</div>
 		<div class="w3-bar-block">
-							<a href="index.html#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
-							<a href="LINK CATEGORY HERE" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Categories</a> 
-							<a href="LINK CART HERE" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cart</a> 
-							<a href="index.html#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Our Team</a> 
-							<a href="LINK ACCOUNT PAGE HERE" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Account Management</a> 
-							<a href="index.html#membership" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Membership</a> 
-							<a href="index.html#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+							<a href="Start?currPage=home" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
+							<a href="Start?currPage=categories" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Categories</a> 
+							<a href="Start?currPage=cart" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cart</a> 
+							<a href="Start?currPage=team" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Our Team</a> 
+							<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Account Management</a> 
+							<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Membership</a> 
+							<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
 		</div>
 	</nav>
 
