cleaned some code

--- a/WebContent/backupIndex.html
+++ b/WebContent/backupIndex.html
@@ -52,7 +52,7 @@ body {font-size:16px;}
 				<td><input type='text' name='browse' placeholder='Browse Books'></input><input type='submit' name='Search' value='Search'></input></td>
 			</tr>
 			<tr>
-				<td><p name='results'></p></td>
+				<td><p id='results'></p></td>
 			</tr>
 		</table>
 	</form>
@@ -115,7 +115,7 @@ body {font-size:16px;}
         <img src="/w3images/team2.jpg" alt="John" style="width:100%">
         <div class="w3-container">
           <h3>John Doe</h3>
-          <p class="w3-opacity">CEO & Founder</p>
+          <p class="w3-opacity">CEO &amp; Founder</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
         </div>
       </div>
