--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -196,7 +196,7 @@ body {
 						alt="John" style="width: 100%">
 					<div class="w3-container">
 						<h3>Jason Skinner</h3>
-						<p class="w3-opacity">CEO & Founder</p>
+						<p class="w3-opacity">CEO &amp; Founder</p>
 						<p>Phasellus eget enim eu lectus faucibus vestibulum.
 							Suspendisse sodales pellentesque elementum.</p>
 					</div>
@@ -210,7 +210,7 @@ body {
 						alt="John" style="width: 100%">
 					<div class="w3-container">
 						<h3>Sherry Innocent</h3>
-						<p class="w3-opacity">CEO & Founder</p>
+						<p class="w3-opacity">CEO &amp; Founder</p>
 						<p>Phasellus eget enim eu lectus faucibus vestibulum.
 							Suspendisse sodales pellentesque elementum.</p>
 					</div>
@@ -225,7 +225,7 @@ body {
 						alt="John" style="width: 100%">
 					<div class="w3-container">
 						<h3>Amanda D'Errico</h3>
-						<p class="w3-opacity">CEO & Founder</p>
+						<p class="w3-opacity">CEO &amp; Founder</p>
 						<p>Phasellus eget enim eu lectus faucibus vestibulum.
 							Suspendisse sodales pellentesque elementum.</p>
 					</div>
@@ -239,7 +239,7 @@ body {
 						alt="John" style="width: 100%">
 					<div class="w3-container">
 						<h3>Mashruf Kabir</h3>
-						<p class="w3-opacity">CEO & Founder</p>
+						<p class="w3-opacity">CEO &amp; Founder</p>
 						<p>Phasellus eget enim eu lectus faucibus vestibulum.
 							Suspendisse sodales pellentesque elementum.</p>
 					</div>
