--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -31,28 +31,28 @@ body {
 </style>
 <body>
 
-		<nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding"
-			style="z-index: 3; width: 300px; font-weight: bold;" id="mySidebar">
-			<br /> <a href="javascript:void(0)" onclick="w3_close()"
-				class="w3-button w3-hide-large w3-display-topleft"
-				style="width: 100%; font-size: 22px">Close Menu</a>
-			<div class="w3-container">
-				<h3 class="w3-padding-64"></h3>
-			</div>
-			<div class="w3-bar-block">
-				<a href="Start?currPage=home" onclick="w3_close()"
-					class="w3-bar-item w3-button w3-hover-white">Home</a> <a
-					href="Start?currPage=categories" onclick="w3_close()"
-					class="w3-bar-item w3-button w3-hover-white">Categories</a> <a
-					href="Start?currPage=cart" onclick="w3_close()"
-					class="w3-bar-item w3-button w3-hover-white">Cart</a>
-				<!-- 				<a href="Start?currPage=team" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Our Team</a>  -->
-				<a href="Start?currPage=login" onclick="w3_close()"
-					class="w3-bar-item w3-button w3-hover-white">Account Management</a>
-				<!-- 				<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Membership</a>  -->
-				<!-- 				<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a> -->
-			</div>
-		</nav>
+	<nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding"
+		style="z-index: 3; width: 300px; font-weight: bold;" id="mySidebar">
+		<br /> <a href="javascript:void(0)" onclick="w3_close()"
+			class="w3-button w3-hide-large w3-display-topleft"
+			style="width: 100%; font-size: 22px">Close Menu</a>
+		<div class="w3-container">
+			<h3 class="w3-padding-64"></h3>
+		</div>
+		<div class="w3-bar-block">
+			<a href="Start?currPage=home" onclick="w3_close()"
+				class="w3-bar-item w3-button w3-hover-white">Home</a> <a
+				href="Start?currPage=categories" onclick="w3_close()"
+				class="w3-bar-item w3-button w3-hover-white">Categories</a> <a
+				href="Start?currPage=cart" onclick="w3_close()"
+				class="w3-bar-item w3-button w3-hover-white">Cart</a>
+			<!-- 				<a href="Start?currPage=team" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Our Team</a>  -->
+			<a href="Start?currPage=login" onclick="w3_close()"
+				class="w3-bar-item w3-button w3-hover-white">Account Management</a>
+			<!-- 				<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Membership</a>  -->
+			<!-- 				<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a> -->
+		</div>
+	</nav>
 
 	<!-- Top menu on small screens -->
 	<header
@@ -67,6 +67,10 @@ body {
 
 	<!-- !PAGE CONTENT! -->
 	<div class="w3-main" style="margin-left: 340px; margin-right: 40px">
+		<form name="logout" action="Start?currPage=logout" method="post"
+			onsubmit="Start?currPage=logout">
+			<div align="right">${UserName}<button value="Logout">Logout</button></div>
+		</form>
 
 		<!-- Header -->
 		<div class="w3-container" style="margin-top: 80px" id="showcase">
@@ -79,7 +83,8 @@ body {
 			<table style="width: 100%">
 				<tr align="right">
 					<td><input type='text' name='searchField' id="searchField"
-						placeholder='Browse Books'></input><input type="submit" name="Search" value="Search"></input></td> 
+						placeholder='Browse Books'></input><input type="submit"
+						name="Search" value="Search"></input></td>
 				</tr>
 				<tr>
 					<td><p id='resultDisplay'></p></td>
