--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -93,50 +93,10 @@ body {
 		</form>
 
 
-		<div class="w3-container" id="trendingBooks" style="margin-top: 75px">
-			<h1 class="w3-xxxlarge w3-text-red">
-				<b>Trending Books</b>
-			</h1>
-			<hr style="width: 50px; border: 5px solid red" class="w3-round">
-
-
-			<!-- Photo grid (modal) -->
-			<div class="w3-row-padding">
-				<div class="w3-half">
-					<img src="/w3images/kitchenconcrete.jpg" style="width: 100%"
-						onclick="onClick(this)" alt="Concrete meets bricks"> <img
-						src="/w3images/livingroom.jpg" style="width: 100%"
-						onclick="onClick(this)"
-						alt="Light, white and tight scandinavian design"> <img
-						src="/w3images/diningroom.jpg" style="width: 100%"
-						onclick="onClick(this)" alt="White walls with designer chairs">
-				</div>
-
-				<div class="w3-half">
-					<img src="/w3images/atrium.jpg" style="width: 100%"
-						onclick="onClick(this)" alt="Windows for the atrium"> <img
-						src="/w3images/bedroom.jpg" style="width: 100%"
-						onclick="onClick(this)" alt="Bedroom and office in one space">
-					<img src="/w3images/livingroom2.jpg" style="width: 100%"
-						onclick="onClick(this)" alt="Scandinavian design">
-				</div>
-			</div>
-
-			<!-- Modal for full size images on click-->
-			<div id="modal01" class="w3-modal w3-black" style="padding-top: 0"
-				onclick="this.style.display='none'">
-				<span class="w3-button w3-black w3-xxlarge w3-display-topright">×</span>
-				<div
-					class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-					<img id="img01" class="w3-image">
-					<p id="caption"></p>
-				</div>
-			</div>
-		</div>
 
 		<div class="w3-container" id="membership" style="margin-top: 75px">
 			<h1 class="w3-xxxlarge w3-text-red">
-				<b>Swag Membership</b>
+				<b>Membership - Coming next summer!</b>
 			</h1>
 			<hr style="width: 50px; border: 5px solid red" class="w3-round">
 			<p>Get ahead in your EECS classes by getting top-notch notes from
@@ -166,8 +126,7 @@ body {
 					<ul class="w3-ul w3-light-grey w3-center">
 						<li class="w3-red w3-xlarge w3-padding-32">Pro</li>
 						<li class="w3-padding-16">PDF, PPTX Downloads</li>
-						<li class="w3-padding-16">Get to spend 6 hours with Mash
-							(Wow.)</li>
+						<li class="w3-padding-16">30 hours support</li>
 						<li class="w3-padding-16">Teaching Assistant Availability</li>
 						<li class="w3-padding-16">
 							<h2>$19</h2> <span class="w3-opacity">per month</span>
@@ -211,7 +170,7 @@ body {
 			<div class="w3-quarter m4 w3-margin-bottom">
 				<div class="w3-light-grey">
 					<img
-						src="https://media.licdn.com/dms/image/C5603AQEmK4MowfKL4Q/profile-displayphoto-shrink_800_800/0?e=1558569600&v=beta&t=Ojjuq6zXbf4SBPGVUWM5GxWU5iEBfvVgwmjMxi-4S3o"
+						src="https://media.licdn.com/dms/image/C5603AQH7OUy7YWS-jQ/profile-displayphoto-shrink_800_800/0?e=1560988800&v=beta&t=Dci7No4JzlXCtXHWBHbiWdOfVnArY_TOmxoY2Sapnpk"
 						alt="John" style="width: 100%">
 					<div class="w3-container">
 						<h3>Sherry Innocent</h3>
